--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				</div>
 				<a href="#home">
 					<img
-						src="./images/icon-close.png"
+						src="./images/icon-close.webp"
 						alt="close" />
 				</a>
 			</div>
@@ -171,7 +171,8 @@
 									type="text"
 									name="name"
 									id="user_name"
-									placeholder="Ваше ім'я" />
+									placeholder="Ваше ім'я"
+									required />
 							</label>
 							<label for="user_surname">
 								<span>Прізвище<sup>*</sup></span>
@@ -180,7 +181,8 @@
 									type="text"
 									name="surname"
 									id="user_surname"
-									placeholder="Ваше прізвище" />
+									placeholder="Ваше прізвище"
+									required />
 							</label>
 							<label for="user_phone">
 								<span>Номер телефону<sup>*</sup></span>
@@ -188,7 +190,8 @@
 									type="tel"
 									name="phone"
 									id="user_phone"
-									placeholder="+3 (__) ___ - __ - __" />
+									placeholder="+3 (__) ___ - __ - __"
+									required />
 							</label>
 							<label for="user_email">
 								<span>Електронна пошта</span>
@@ -206,7 +209,7 @@
 						</form>
 						<img
 							class="hero__person-img"
-							src="./images/hero.png"
+							src="./images/hero.webp"
 							alt="hero" />
 					</div>
 				</div>
@@ -236,7 +239,7 @@
 							</div>
 							<div class="about__item--img">
 								<img
-									src="./images/abstract_green.png"
+									src="./images/abstract_green.webp"
 									alt="abstract_green" />
 							</div>
 						</div>
@@ -256,14 +259,14 @@
 							</div>
 							<div class="about__item--img">
 								<img
-									src="./images/runner.png"
+									src="./images/runner.webp"
 									alt="runner" />
 							</div>
 						</div>
 					</div>
 					<div class="about__right flex flex-column">
 						<img
-							src="./images/brain_green.png"
+							src="./images/brain_green.webp"
 							alt="" />
 						<h5 class="h5">
 							Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя
@@ -295,7 +298,7 @@
 					<div class="benefits__item">
 						<div class="benefits__item--img">
 							<img
-								src="./images/benefits_abstract_green_01.png"
+								src="./images/benefits_abstract_green_01.webp"
 								alt="" />
 						</div>
 						<h5 class="h5">Lorem Ipsum</h5>
@@ -304,7 +307,7 @@
 					<div class="benefits__item">
 						<div class="benefits__item--img">
 							<img
-								src="./images/benefits_abstract_green_02.png"
+								src="./images/benefits_abstract_green_02.webp"
 								alt="" />
 						</div>
 						<h5 class="h5">Lorem Ipsum</h5>
@@ -313,7 +316,7 @@
 					<div class="benefits__item">
 						<div class="benefits__item--img">
 							<img
-								src="./images/benefits_abstract_green_03.png"
+								src="./images/benefits_abstract_green_03.webp"
 								alt="" />
 						</div>
 						<h5 class="h5">Lorem Ipsum</h5>
@@ -349,7 +352,7 @@
 						<div class="profit__slider">
 							<div class="profit__slider--heading flex">
 								<h5 class="h5">Сума інвестицій</h5>
-								<span class="profit__slider--sum">29 565</span>
+								<span class="profit__slider--sum invest-sum">27500</span>
 							</div>
 							<div class="profit__slider--gradient">
 								<input
@@ -359,6 +362,7 @@
 									id="rangeInvest"
 									min="5000"
 									max="50000"
+									value="27500"
 									step="10" />
 							</div>
 							<div class="profit__slider--heading flex">
@@ -371,7 +375,7 @@
 						<div class="profit__slider">
 							<div class="profit__slider--heading flex">
 								<h5 class="h5">Сума прибутку</h5>
-								<span class="profit__slider--sum">96 123</span>
+								<span class="profit__slider--sum profit-sum">206 250</span>
 							</div>
 							<div class="profit__slider--gradient">
 								<input
@@ -381,6 +385,7 @@
 									id="rangeProfit"
 									min="35000"
 									max="210000"
+									value=""
 									step="10" />
 							</div>
 
