feat: add sliders functionality, add favicon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
 		<link
 			rel="stylesheet"
 			href="./css/styles.css" />
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="./assets/apple-touch-icon.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./assets/favicon-32x32.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="./assets/favicon-16x16.png" />
+		<link
+			rel="manifest"
+			href="./assets/site.webmanifest" />
+		<meta
+			name="msapplication-TileColor"
+			content="#da532c" />
+		<meta
+			name="theme-color"
+			content="#ffffff" />
+		<link
+			rel="shortcut icon"
+			href="favicon.ico"
+			type="image/x-icon" />
 		<title>Інвестувати проще</title>
 	</head>
 	<body id="home">
@@ -444,7 +471,7 @@
 							Lorem Ipsum - це текст-"риба", що використовується в
 							<br />друкарстві та дизайні
 						</p>
-						<hr class='footer__hr'>
+						<hr class="footer__hr" />
 						<p class="text">
 							Lorem Ipsum є, фактично, стандартною "рибою" аж з XVI сторіччя,
 							коли невідомий друкар взяв шрифтову гранку та склав на ній
